syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package event;

option go_package = ".;api";

service EventService {
  rpc Create(CreateEventRequest) returns (Event);
  rpc Update(UpdateEventRequest) returns (Event);
  rpc Delete(DeleteEventRequest) returns (google.protobuf.Empty);
  rpc DayList(DayListRequest) returns (Events);
  rpc WeekList(WeekListRequest) returns (Events);
  rpc MonthList(MonthListRequest) returns (Events);
}

message CreateEventRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp begin_date = 4;
  google.protobuf.Timestamp end_date = 5;
}

message UpdateEventRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp begin_date = 4;
  google.protobuf.Timestamp end_date = 5;
}

message DeleteEventRequest {
  string id = 1;
}

message DayListRequest {
  google.protobuf.Timestamp day = 1;
}

message WeekListRequest {
  google.protobuf.Timestamp begin_date = 1;
}

message MonthListRequest {
  google.protobuf.Timestamp begin_date = 1;
}

message Event {
  string id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp begin_date = 4;
  google.protobuf.Timestamp end_date = 5;
}

message Events {
  repeated Event items = 1;
}
